--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ plugins/mitogen
 
 # Ansible inventory
 inventory/*
+!inventory/my-cluster
 !inventory/local
 !inventory/sample
 inventory/*/artifacts/
